Drop the dependency on `com.google.errorprone:javac`
This new setup matches the upstream Error Prone build configuration and
simplifies development against JDK 11+ internal APIs.